salesforcedotcom-salesforce/src/objects/CustomObject__c.object
<CustomObject>
    <fields>
        <fullName>Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean026</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Object11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Object11</label>
        <referenceTo>Custom_Object11__c</referenceTo>
        <relationshipLabel>CustomObjects11</relationshipLabel>
        <relationshipName>CustomObjects11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Object1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Object1</label>
        <referenceTo>Custom_Object1__c</referenceTo>
        <relationshipLabel>CustomObjects1</relationshipLabel>
        <relationshipName>CustomObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <label>Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minute__c</fullName>
        <label>Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RichTextArea__c</fullName>
        <label>RichTextArea</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <externalId>true</externalId>
        <label>ForeignKey</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Difference__c</fullName>
        <formula>(LastModifiedDate - CreatedDate )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Difference</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customhierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Hierarchy</label>
        <referenceTo>Custom_Hierarchy__c</referenceTo>
        <relationshipLabel>CustomObjects</relationshipLabel>
        <relationshipName>CustomObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>datetime__c</fullName>
        <label>datetime</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url_short__c</fullName>
        <formula>LEFT(url__c, 40)</formula>
        <label>url short</label>
        <type>Text</type>
    </fields>
    <label>CustomObject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>customhierarchy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CustomObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>